<resources>
    <string name="app_name">BelGioioso Cheese Milk Receipt</string>
    <string name="db_version">1</string>
    <string name="signinpage1">BelGioioso Cheese Milk Receipt</string>
    <string name="signin_usernamelabel">Username</string>
    <string name="signin_pinlabel">PIN</string>
    <string name="signin_login_button">LOGIN</string>
    <string name="about_label">BCIMilkReceipt(About this application)</string>
    <string name="about_label_1">BelGioioso Cheese Inc</string>
    <string name="about_label_2">4200 Main Street</string>
    <string name="about_label_3">Green Bay, WI 54311</string>
    <string name="about_label_4">1-877-863-2123</string>
    <string name="about_back_button">BACK</string>
    <string name="about_cleandb_button">CLEAN DB</string>
    <string name="receipt_descriptionlabel">SELECT RECEIPT TYPE TO START</string>
    <string name="receipt_newlabel">New Receipt</string>
    <string name="receipt_existinglabel">Existing Receipt</string>
    <string name="receipt_new_button">NEW RECEIPT</string>
    <string name="receipt_existing_button">EXISTING RECEIPT</string>
    <string name="pickup_description">MILK RECEIPT PRODUCER PICKUP ENTRY</string>
    <string name="pickup_producer">Producer (4 digits numeric only)</string>
    <string name="pickup_tank">Tank (2 digits numeric only)</string>
    <string name="pickup_gaugerod">Gauge Rod Major / Minor</string>
    <string name="pickup_gaugerod_spacer">/</string>
    <string name="pickup_temperature">Temperature</string>
    <string name="pickup_dfanumber">DFA Reference Number</string>
    <string name="pickup_labcode">Lab Code</string>
    <string name="pickup_save_button">SAVE PICKUP</string>
    <string name="pickup_convertedlbs">Converted LBS / Confirmation LBS</string>
    <string name="pickup_gotoreceive_button">GO TO RECEIVE</string>
    <string name="pickup_scanproducer_button">Scan Producer</string>
    <string name="pickup_scanlabcode_button">Scan Lab Code</string>
    <string name="pickup_previous_button">Previous</string>
    <string name="pickup_next_button">Next</string>
    <string name="main_description">MILK RECEIPT NEW RECEIPT ENTRY</string>
    <string name="main_routelabel">Route Identifier</string>
    <string name="main_licenselabel">Truck License Number</string>
    <string name="main_startmileagelabel">Start Mileage (Odometer)</string>
    <string name="main_savereceipt_button">SAVE RECEIPT GOTO PICKUPS</string>
    <string name="settings_description">MILK RECEIPT SETTINGS</string>
    <string name="settings_webserviceurl">Web Service URL (500 max)</string>
    <string name="settings_drugtestdevice">Drug Test Device (150 max)</string>
    <string name="settings_scanloop">Scan Loop (Numeric Only)</string>
    <string name="settings_trackpickupgeolocation">Track Pickup Geo Location</string>
    <string name="settings_trackroutegeolocation">Track Route Geo Location</string>
    <string name="settings_enabledebug">Enable Debug</string>
    <string name="settings_enableautodbbackup">Enable Auto DB Backup</string>
    <string name="settings_downloadnotcompleteddata">Download Not Completed Data</string>
    <string name="settings_buttoneditcancel">Edit/Cancel</string>
    <string name="settings_buttonsave">Save</string>
    <string name="actlog_description">MILK RECEIPT ACTIVITY LOG</string>
    <string name="actlog_searchbutton">SEARCH</string>
    <string name="actlog_listdescription">Activity Records</string>
    <string name="actlog_actusername_record">Username: </string>
    <string name="actlog_acttype_record">Type: </string>
    <string name="actlog_actmodule_record">Module: </string>
    <string name="actlog_actroutine_record">Routine: </string>
    <string name="actlog_actmessage_record">Message: </string>
    <string name="actlog_actstacktrace_record">Stack Trace: </string>
    <string name="actlog_actinsertdate_record">Insert Date: </string>
    <string name="actlog_recorddescription">Record Description</string>
    <string name="receive_description">MILK RECEIPT RECEIVE ENTRY</string>
    <string name="receive_save_button">SAVE RECEIVE</string>
    <string name="receive_plantlabel">Receive Plant</string>
    <string name="receive_drugtestlabel">Drug Test Device / Result</string>
    <string name="receive_drugtest_spacer">/</string>
    <string name="receive_receivelbslabel">Received LBS / Confirmation LBS</string>
    <string name="receive_receivelbs_spacer">/</string>
    <string name="receive_scalemeterlabel">Scale/Meter</string>
    <string name="receive_silolabel">Silo</string>
    <string name="receive_sealslabel">Top Seal / Bottom Seal</string>
    <string name="receive_seals_spacer">/</string>
    <string name="receive_finishticket_button">FINISH TICKET</string>
    <string name="receive_temperaturelabel">Receive Temperature</string>
    <string name="receive_endmileagelabel">End Mileage (Odometer) / Intake Number</string>
    <string name="receive_endmileage_spacer">/</string>
    <string name="receive_previous_button">Previous</string>
    <string name="receive_next_button">Next</string>
</resources>
