<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.belgioioso.bcimilkreceipt.bcimilkreceipt.LogActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_spacer1"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_descriptionlabel"
        android:text="@string/actlog_description"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/valueText_Lime"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/actlog_spacer1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_spacer2"
        android:text=""
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/actlog_descriptionlabel"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_startdate"
        android:layout_marginLeft="30dp"
        android:hint="Start Date"
        android:inputType="date"
        android:lines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actlog_spacer2"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_enddate"
        android:layout_marginRight="30dp"
        android:hint="End Date"
        android:inputType="date"
        android:lines="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actlog_spacer2"/>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_acttype"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actlog_startdate"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_searchbutton"
        android:layout_marginRight="30dp"
        android:text="@string/actlog_searchbutton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actlog_enddate"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_listdescription"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/valueText_Lime"
        android:text="@string/actlog_listdescription"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/actlog_searchbutton"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:id="@+id/actlog_activityrecords"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/actlog_listdescription"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_spacer3"
        android:text=""
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/actlog_activityrecords"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_recorddescription"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/valueText_Lime"
        android:text="@string/actlog_recorddescription"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/actlog_spacer3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_spacer4"
        android:text=""
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/actlog_recorddescription"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_actusername_record"
        android:layout_marginLeft="30dp"
        android:text="@string/actlog_actusername_record"
        app:layout_constraintTop_toBottomOf="@id/actlog_spacer4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_acttype_record"
        android:layout_marginLeft="30dp"
        android:text="@string/actlog_acttype_record"
        app:layout_constraintTop_toBottomOf="@id/actlog_actusername_record"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_actmodule_record"
        android:layout_marginLeft="30dp"
        android:text="@string/actlog_actmodule_record"
        app:layout_constraintTop_toBottomOf="@id/actlog_acttype_record"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_actroutine_record"
        android:layout_marginLeft="30dp"
        android:text="@string/actlog_actroutine_record"
        app:layout_constraintTop_toBottomOf="@id/actlog_actmodule_record"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_actmessage_record"
        android:layout_marginLeft="30dp"
        android:text="@string/actlog_actmessage_record"
        app:layout_constraintTop_toBottomOf="@id/actlog_actroutine_record"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_actstacktrace_record"
        android:layout_marginLeft="30dp"
        android:text="@string/actlog_actstacktrace_record"
        app:layout_constraintTop_toBottomOf="@id/actlog_actmessage_record"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actlog_actinsertdate_record"
        android:layout_marginLeft="30dp"
        android:text="@string/actlog_actinsertdate_record"
        app:layout_constraintTop_toBottomOf="@id/actlog_actstacktrace_record"/>

</android.support.constraint.ConstraintLayout>
