<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/valueBlack"
    tools:context="com.belgioioso.bcimilkreceipt.bcimilkreceipt.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spacertop"
        android:text=""
        android:textSize="0dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageviewLogo"
        android:src="@drawable/logo_wide"
        app:layout_constraintTop_toBottomOf="@id/spacertop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spacertop1"
        app:layout_constraintTop_toBottomOf="@id/imageviewLogo"
        android:text=""
        android:textSize="20dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:id="@+id/about_cleandb_button"
        android:text="@string/about_cleandb_button"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/spacertop1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spacertop1_2"
        app:layout_constraintTop_toBottomOf="@id/about_cleandb_button"
        android:text=""
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/aboutlabel"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_x="20px"
        android:layout_y="20px"
        android:text="@string/about_label"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/spacertop1_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/aboutlabel1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_x="20px"
        android:layout_y="20px"
        android:text="@string/about_label_1"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/aboutlabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/aboutlabel2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_x="20px"
        android:layout_y="20px"
        android:text="@string/about_label_2"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/aboutlabel1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/aboutlabel3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_x="20px"
        android:layout_y="20px"
        android:text="@string/about_label_3"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/aboutlabel2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/aboutlabel4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_x="20px"
        android:layout_y="20px"
        android:text="@string/about_label_4"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/aboutlabel3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spacertop2"
        app:layout_constraintTop_toBottomOf="@id/aboutlabel4"
        android:text=""
        android:textSize="50dp"/>

    <TextView
        android:id="@+id/aboutlabel5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_x="20px"
        android:layout_y="20px"
        android:text="Version: x.x.x.x"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/spacertop2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/aboutlabel6"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_x="20px"
        android:layout_y="20px"
        android:text="Tablet Name: xxxxx"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/aboutlabel5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spacertop3"
        app:layout_constraintTop_toBottomOf="@id/aboutlabel6"
        android:text=""
        android:textSize="30dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_margin="50dp"
        android:id="@+id/about_back_button"
        android:text="@string/about_back_button"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/spacertop3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
